--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "JapaneseLearner",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Chrome extension to train kanji, hiragana and katakana",
   "permissions": ["storage"],
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html"
   },
   "manifest_version": 3
